--- a/application/modules/Admin/views/common/setting-nav.html
+++ b/application/modules/Admin/views/common/setting-nav.html
@@ -8,6 +8,9 @@
     <li class="layui-nav-item">
         <a href="/<?php echo ADMIN_DIR;?>/payment">支付设置</a>
     </li>
+    <li class="layui-nav-item">
+        <a href="/<?php echo ADMIN_DIR;?>/ad">广告设置</a>
+    </li>
 </ul>
 <div class="site-tree-mobile layui-hide">
     <i class="layui-icon">&#xe602;</i>
