--- a/application/modules/Admin/views/common/header.html
+++ b/application/modules/Admin/views/common/header.html
@@ -93,7 +93,7 @@
 			aMenu[4].className += ' layui-this';
 		} else if (aName.indexOf('/<?php echo ADMIN_DIR;?>/user') > -1) {
 			aMenu[3].className += ' layui-this';
-		} else if (aName.indexOf('/<?php echo ADMIN_DIR;?>/setting') > -1 || aName.indexOf('/<?php echo ADMIN_DIR;?>/email') > -1 || aName.indexOf('/<?php echo ADMIN_DIR;?>/payment') > -1) {
+		} else if (aName.indexOf('/<?php echo ADMIN_DIR;?>/setting') > -1 || aName.indexOf('/<?php echo ADMIN_DIR;?>/email') > -1 || aName.indexOf('/<?php echo ADMIN_DIR;?>/payment') > -1 || aName.indexOf('/<?php echo ADMIN_DIR;?>/ad') > -1) {
 			aMenu[2].className += ' layui-this';
 		} else if (aName.indexOf('/<?php echo ADMIN_DIR;?>') > -1) {
 			aMenu[1].className += ' layui-this';
