--- a/application/modules/Admin/views/ad/edit.html
+++ b/application/modules/Admin/views/ad/edit.html
@@ -2,9 +2,9 @@
 <div class="layui-container fly-marginTop fly-user-main">
     <?php include ADMIN_COMMON_PATH.'/setting-nav.html';?>
     <div class="fly-panel fly-panel-user" pad20>
-        <div class="layui-tab layui-tab-brief" lay-filter="email">
+        <div class="layui-tab layui-tab-brief" lay-filter="ad">
             <ul class="layui-tab-title" id="LAY_mine">
-				<li lay-id="info"><a href="/<?php echo ADMIN_DIR;?>/email/">邮箱管理</a></li>
+				<li lay-id="info"><a href="/<?php echo ADMIN_DIR;?>/ad/">广告管理</a></li>
 				<li class="layui-this" lay-id="info">编辑</li>
             </ul>
             <div class="layui-tab-content" style="padding: 20px 0;">
