--- a/templates/shadan/index/index.html
+++ b/templates/shadan/index/index.html
@@ -3,7 +3,7 @@
     <div class="layui-row">
 	
 		<!-- 广告位-->
-		<?php if(isset($ad['product_index_ad']) AND !empty()):?>
+		<?php if(isset($ad['product_index_ad']) AND !empty($ad['product_index_ad'])):?>
 		<div class="layui-card">
 			<div class="layui-card-header">广告位</div>
 			<div class="layui-card-body">
