--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -1,17 +1,27 @@
 <?php include '../templates/shadan/common/header.html';?>
 <div class="layui-container fly-marginTop fly-user-main">
     <div class="layui-row">
+		<!-- 公告-->
+		<?php if(isset($config['notice']) AND $config['notice']):?>
+		<blockquote class="layui-elem-quote layui-text" style="background-color: #ffffff;">
+			<i class="layui-icon layui-icon-speaker"></i><?php echo $config['notice'];?>
+		</blockquote>
+		<?php endif;?>
+		
+		<!-- Banner图-->
 		<div class="layui-carousel" id="carousel_index">
 		  <div carousel-item>
-			<div>条目1</div>
-			<div>条目2</div>
-			<div>条目3</div>
-			<div>条目4</div>
-			<div>条目5</div>
+			<div><img src="/res/images/banner/1.jpg"></div>
+			<div><img src="/res/images/banner/2.jpg"></div>
+			<div><img src="/res/images/banner/3.jpg"></div>
+			<div><img src="/res/images/banner/4.jpg"></div>
 		  </div>
 		</div>
+		
+		
     </div>
 </div>
+<!-- 首页弹窗广告-->
 <div id="layerad" style="display: none;"><?php echo $config['layerad'];?></div>
 <!--引入公共底文件-->
 <?php include '../templates/shadan/common/footer.html';?>
