--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -67,7 +67,7 @@
 			<div class="fly-panel">
 				<h3 class="fly-panel-title">捐赠</h3>
 				<div class="fly-panel-main">
-					<img src="/res/images/pay/supportme.jpg">
+					<img width="100%" src="/res/images/pay/supportme.jpg">
 				</div>
 			</div>
 			
@@ -149,25 +149,13 @@
 			  <div class="fly-panel fly-link">
 					<h3 class="fly-panel-title">友情链接</h3>
 					<dl class="fly-panel-main">
-				  <dd><a href="http://www.layui.com/" target="_blank">layui</a><dd>
-				  <dd><a href="http://layim.layui.com/" target="_blank">WebIM</a><dd>
-				  <dd><a href="http://layer.layui.com/" target="_blank">layer</a><dd>
-				  <dd><a href="http://www.layui.com/laydate/" target="_blank">layDate</a><dd>
-				  <dd><a href="mailto:xianxin@layui-inc.com?subject=%E7%94%B3%E8%AF%B7Fly%E7%A4%BE%E5%8C%BA%E5%8F%8B%E9%93%BE" class="fly-link">申请友链</a><dd>
-				</dl>
+						<dd><a href="http://zlkb.net/" target="_blank">资料空白的个人博客</a><dd>
+						<dd><a href="http://faka.zlkb.net/" target="_blank">ZFAKA</a><dd>
+					</dl>
 			  </div>
 		</div>
 	</div>
 </div>
-<div class="fly-footer">
-  <p><a href="http://fly.layui.com/" target="_blank">Fly社区</a> 2017 &copy; <a href="http://www.layui.com/" target="_blank">layui.com 出品</a></p>
-  <p>
-    <a href="http://fly.layui.com/jie/3147/" target="_blank">付费计划</a>
-    <a href="http://www.layui.com/template/fly/" target="_blank">获取Fly社区模版</a>
-    <a href="http://fly.layui.com/jie/2461/" target="_blank">微信公众号</a>
-  </p>
-</div>
-
 <!-- 首页弹窗广告-->
 <div id="layerad" style="display: none;"><?php echo $config['layerad'];?></div>
 <!--引入公共底文件-->
