--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -58,89 +58,21 @@
 					<img width="100%" src="/res/images/pay/supportme.jpg">
 				</div>
 			</div>
-			
-			<div class="fly-panel fly-rank fly-rank-reply" id="LAY_replyRank">
-				<h3 class="fly-panel-title">推荐商品</h3>
-				<dl>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				  <dd>
-					<a href="user/home.html">
-					  <img src="https://tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"><cite>贤心</cite><i>106次回答</i>
-					</a>
-				  </dd>
-				</dl>
-			  </div>
 
-			  <div class="fly-panel">
-				<div class="fly-panel-title">
-				  这里可作为广告区域
-				</div>
+			<div class="fly-panel">
+				<div class="fly-panel-title">广告区域</div>
 				<div class="fly-panel-main">
 				  <a href="http://layim.layui.com/?from=fly" target="_blank" class="fly-zanzhu" time-limit="2017.09.25-2099.01.01" style="background-color: #5FB878;">LayIM 3.0 - layui 旗舰之作</a>
 				</div>
-			  </div>
+			</div>
       
-			  <div class="fly-panel fly-link">
-					<h3 class="fly-panel-title">友情链接</h3>
-					<dl class="fly-panel-main">
-						<dd><a href="http://zlkb.net/" target="_blank">资料空白的个人博客</a><dd>
-						<dd><a href="http://faka.zlkb.net/" target="_blank">ZFAKA</a><dd>
-					</dl>
-			  </div>
+			<div class="fly-panel fly-link">
+				<h3 class="fly-panel-title">友情链接</h3>
+				<dl class="fly-panel-main">
+					<dd><a href="http://zlkb.net/" target="_blank">资料空白的个人博客</a><dd>
+					<dd><a href="http://faka.zlkb.net/" target="_blank">ZFAKA</a><dd>
+				</dl>
+			</div>
 		</div>
 	</div>
 </div>
