--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -64,7 +64,7 @@
 			<?php if(isset($ad['index_side_ad']) AND $ad['index_side_ad']):?>
 			<div class="fly-panel">
 				<div class="fly-panel-title">广告区域</div>
-				<div class="fly-panel-main">
+				<div class="fly-panel-main" style="text-align: center;">
 					<?php echo $ad['index_side_ad'];?>
 				</div>
 			</div>
