--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -38,10 +38,9 @@
 							<img src="/res/images/avatar/<?php echo rand(0,11);?>.jpg" alt="资料空白">
 						</a>
 						<h2>
-							<a href="jie/detail.html"><?php echo $help['title'];?></a>
+							<a href="/member/help/index/detail/?id=<?php echo $help['id'];?>"><?php echo $help['title'];?></a>
 						</h2>
 						<div class="fly-list-info">
-						  <a href="user/home.html" link></a>
 						  <span><?php echo date("Y-m-d H:i:s",$help['addtime']);?></span>
 						</div>
 					</li>
