--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -55,7 +55,7 @@
 			<div class="fly-panel">
 				<h3 class="fly-panel-title">捐赠</h3>
 				<div class="fly-panel-main">
-					<img width="100%" src="/res/images/pay/supportme.jpg">
+					<img width="100%" src="/res/images/pay/weixin.png">
 				</div>
 			</div>
 			
