--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -68,17 +68,19 @@
 				</div>
 			</div>
 			<?php endif;?>
-			
-			<!-- 友情链接-->
-			<div class="fly-panel fly-link">
-				<h3 class="fly-panel-title">友情链接</h3>
-				<dl class="fly-panel-main">
-					<dd><a href="http://zlkb.net/" target="_blank">资料空白的个人博客</a><dd>
-					<dd><a href="http://faka.zlkb.net/" target="_blank">ZFAKA</a><dd>
-				</dl>
-			</div>
 		</div>
 	</div>
+	
+	<!-- 友情链接-->
+	<div class="layui-row layui-col-space15">
+		<div class="fly-panel fly-link">
+			<h3 class="fly-panel-title">友情链接</h3>
+			<dl class="fly-panel-main">
+				<dd><a href="http://zlkb.net/" target="_blank">资料空白的个人博客</a><dd>
+				<dd><a href="http://faka.zlkb.net/" target="_blank">ZFAKA</a><dd>
+			</dl>
+		</div>
+	</div>		
 </div>
 <!-- 首页弹窗广告-->
 <div id="layerad" style="display: none;"><?php echo $config['layerad'];?></div>
