--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -53,7 +53,7 @@
 		<div class="layui-col-md4">
 			<!-- 捐赠开发者-->
 			<div class="fly-panel">
-				<h3 class="fly-panel-title">捐赠</h3>
+				<h3 class="fly-panel-title">捐赠作者</h3>
 				<div class="fly-panel-main">
 					<img width="100%" src="/res/images/pay/weixin.png">
 				</div>
