--- a/templates/shadan/Product/index/index.html
+++ b/templates/shadan/Product/index/index.html
@@ -5,7 +5,7 @@
 		<!-- 广告位-->
 		<?php if(isset($ad['product_index_ad']) AND !empty($ad['product_index_ad'])):?>
 		<div class="layui-card">
-			<div class="layui-card-header">广告位</div>
+			<div class="layui-card-header">广告区域</div>
 			<div class="layui-card-body">
 				<?php echo $ad['product_index_ad'];?>
 			</div>
