--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -2,7 +2,7 @@
 <div class="layui-container">
 	<!-- 头部广告-->
 	<?php if(isset($ad['index_top_ad']) AND $ad['index_top_ad']):?>
-	<div class="layui-row">
+	<div class="layui-row" style="margin-top: 10px;">
 		<blockquote class="layui-elem-quote layui-text" style="background-color: #ffffff;">
 			<i class="layui-icon layui-icon-speaker"></i><?php echo $ad['index_top_ad'];?>
 		</blockquote>
