--- a/templates/shadan/Product/query/cookie.html
+++ b/templates/shadan/Product/query/cookie.html
@@ -1,6 +1,7 @@
 <?php include '../templates/shadan/common/header.html';?>
 <div class="layui-container fly-marginTop">
- 
+	<div class="layui-card layui-form-pane">
+		<div class="layui-card-body">
 						<div class="layui-tab layui-tab-brief" lay-filter="">
 							<ul class="layui-tab-title">
 								<li class="layui-this">浏览器缓存</a></li>
@@ -30,6 +31,8 @@
 								</div>
 							</div>
 						</div> 
+		</div>				
+	</div>					
 </div>
 <!-- cookie tpl-->
 <!--引入公共底文件-->
