--- a/templates/shadan/Product/about/index.html
+++ b/templates/shadan/Product/about/index.html
@@ -1,15 +1,17 @@
 <?php include '../templates/shadan/common/header.html';?>
 <div class="layui-container fly-marginTop">
-    <div class="fly-panel fly-panel-user" pad20>
-        <div class="layui-tab layui-tab-brief" lay-filter="user">
-            <ul class="layui-tab-title" id="LAY_mine">
-                <li class="layui-this" lay-id="info">关于我们</li>
-            </ul>
-            <div class="layui-tab-content" style="padding: 20px 0;">
-                <div class="layui-form-pane layui-tab-item layui-show">
-					 <p>ZFAKA发卡系统(本系统基于yaf+layui开发)</p>
-                </div>
-            </div>
+	<div class="layui-card layui-form-pane">
+		<div class="layui-card-body">
+			<div class="layui-tab layui-tab-brief" lay-filter="">
+				<ul class="layui-tab-title" id="LAY_mine">
+					<li class="layui-this" lay-id="info">关于我们</li>
+				</ul>
+				<div class="layui-tab-content" style="padding: 20px 0;">
+					<div class="layui-form-pane layui-tab-item layui-show">
+						 <p>ZFAKA发卡系统(本系统基于yaf+layui开发)</p>
+					</div>
+				</div>
+			</div>	
         </div>
     </div>
 </div>
