--- a/templates/shadan/Product/query/auto.html
+++ b/templates/shadan/Product/query/auto.html
@@ -1,13 +1,7 @@
 <?php include '../templates/shadan/common/header.html';?>
 <div class="layui-container fly-marginTop">
-    <div class="layui-card layui-form-pane">
-		<div class="layui-card-header layui-hide-xs">查询订单</div>
-		<div class="layui-tab-brief layui-hide-md"><ul class="layui-tab-title"><li class=""><a href="/product/">购买商品</a></li><li class="layui-this">查询订单</li></ul></div>
-        <div class="layui-card-body layui-tab layui-tab-brief" lay-filter="user">
-			<blockquote class="layui-elem-quote">
-				友情提示:订单查询仅能查询最近30天的数据；移动端模式下，仅能查询最近一笔订单。
-			</blockquote>
-            <div class="layui-tab-content">
+	<div class="layui-card layui-form-pane">
+		<div class="layui-card-body">
 
 						<div class="layui-tab layui-tab-brief" lay-filter="">
 							<ul class="layui-tab-title">
@@ -15,6 +9,9 @@
 							</ul>
 							<div class="layui-tab-content">
 								<div class="layui-tab-item layui-show">
+									<blockquote class="layui-elem-quote">
+										友情提示:订单查询仅能查询最近30天的数据；移动端模式下，仅能查询最近一笔订单。
+									</blockquote>
 									<div class="layui-form-pane" id="query-pane">
 									<div class="layui-table-querey layui-hide-xs">
 									<table class="layui-table" id="query-table">
@@ -112,8 +109,6 @@
 							</div>
 						</div> 
 					
-
-            </div>
         </div>
     </div>
 </div>
