--- a/templates/shadan/common/header.html
+++ b/templates/shadan/common/header.html
@@ -52,6 +52,9 @@
                 </li>
                 <?php endif;?>
                 <li class="layui-nav-item layui-hide-xs">
+                    <a href="/help/">帮助中心</a>
+                </li>
+                <li class="layui-nav-item layui-hide-xs">
                     <a href="/about/">关于我们</a>
                 </li>				
             </ul>
