改造帮助中心

--- a/templates/shadan/Index/help/index.html
+++ b/templates/shadan/Index/help/index.html
@@ -1,6 +1,5 @@
-<?php include MEMBER_COMMON_PATH.'/header.html';?>
+<?php include '../templates/shadan/common/header.html';?>
 <div class="layui-container fly-marginTop fly-user-main">
-	<?php include MEMBER_COMMON_PATH.'/help-nav.html';?>
     <div class="fly-panel fly-panel-user" pad20>
         <div class="layui-tab layui-tab-brief" lay-filter="user">
             <ul class="layui-tab-title" id="LAY_mine">
@@ -43,7 +42,7 @@
     </div>
 </div>
 <!--引入公共底文件-->
-<?php include MEMBER_COMMON_PATH.'/footer.html';?>
+<?php include '../templates/shadan/common/footer.html';?>
 <script>
 layui.use('memberhelp');
 </script>
