--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -38,7 +38,7 @@
 							<img src="/res/images/avatar/<?php echo rand(0,11);?>.jpg" alt="资料空白">
 						</a>
 						<h2>
-							<a href="/member/help/index/detail/?id=<?php echo $help['id'];?>"><?php echo $help['title'];?></a>
+							<a href="/help/detail/?id=<?php echo $help['id'];?>"><?php echo $help['title'];?></a>
 						</h2>
 						<div class="fly-list-info">
 						  <span><?php echo date("Y-m-d H:i:s",$help['addtime']);?></span>
