--- a/templates/shadan/Index/help/index.html
+++ b/templates/shadan/Index/help/index.html
@@ -1,5 +1,5 @@
 <?php include '../templates/shadan/common/header.html';?>
-<div class="layui-container">
+<div class="layui-container fly-marginTop fly-user-main">
 	<!-- 头部广告-->
 	<?php if(isset($ad['help_top_ad']) AND !empty($ad['help_top_ad'])):?>
 	<div class="layui-card">
