--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -1,5 +1,5 @@
 <?php include '../templates/shadan/common/header.html';?>
-<div class="layui-container">
+<div class="layui-container fly-marginTop fly-user-main">
 	<!-- 头部广告-->
 	<?php if(isset($ad['index_top_ad']) AND $ad['index_top_ad']):?>
 	<div class="layui-row" style="margin-top: 10px;">
