--- a/templates/shadan/Index/help/index.html
+++ b/templates/shadan/Index/help/index.html
@@ -4,7 +4,7 @@
 	<?php if(isset($ad['help_top_ad']) AND !empty($ad['help_top_ad'])):?>
 	<div class="layui-card">
 		<div class="layui-card-header">广告区域</div>
-		<div class="layui-card-body">
+		<div class="layui-card-body zlkb-ad-body">
 			<?php echo $ad['help_top_ad'];?>
 		</div>
 	</div>
@@ -103,7 +103,7 @@
 			<?php if(isset($ad['help_side_ad']) AND $ad['help_side_ad']):?>
 			<div class="fly-panel">
 				<div class="fly-panel-title">广告区域</div>
-				<div class="fly-panel-main" style="text-align: center;">
+				<div class="fly-panel-main zlkb-ad-body" style="text-align: center;">
 					<?php echo $ad['help_side_ad'];?>
 				</div>
 			</div>
