--- a/templates/shadan/Product/index/index.html
+++ b/templates/shadan/Product/index/index.html
@@ -6,7 +6,7 @@
 		<?php if(isset($ad['product_index_ad']) AND !empty($ad['product_index_ad'])):?>
 		<div class="layui-card">
 			<div class="layui-card-header">广告区域</div>
-			<div class="layui-card-body">
+			<div class="layui-card-body zlkb-ad-body">
 				<?php echo $ad['product_index_ad'];?>
 			</div>
 		</div>
