--- a/templates/shadan/common/header.html
+++ b/templates/shadan/common/header.html
@@ -122,8 +122,10 @@
 			aMenu[2].className += ' layui-this';
 		} else if (aName.indexOf('/member/help') > -1) {
 			aMenu[3].className += ' layui-this';
-		} else if (aName.indexOf('/about') > -1) {
+		} else if (aName.indexOf('/help') > -1) {
 			aMenu[4].className += ' layui-this';
+		} else if (aName.indexOf('/about') > -1) {
+			aMenu[5].className += ' layui-this';
 		} else {
 			aMenu[0].className += ' layui-this';
 		}
@@ -132,8 +134,10 @@
 			aMenu[2].className += ' layui-this';
 		} else if (aName.indexOf('/product') > -1 || aName.indexOf('/group') > -1) {
 			aMenu[1].className += ' layui-this';
-		} else if (aName.indexOf('/about') > -1) {
+		} else if (aName.indexOf('/help') > -1) {
 			aMenu[3].className += ' layui-this';
+		} else if (aName.indexOf('/about') > -1) {
+			aMenu[4].className += ' layui-this';
 		} else {
 			aMenu[0].className += ' layui-this';
 		}
