--- a/templates/shadan/Index/help/detail.html
+++ b/templates/shadan/Index/help/detail.html
@@ -25,6 +25,10 @@
         <div class="detail-body photos">
 			<?php echo $items['content'];?>
         </div>
+		<div class="detail-hits">
+            <span class="layui-btn layui-btn-xs jie-admin" type="edit"><a href="add.html">常规问题</a></span>
+			<span style="padding-right: 10px; color: #FF7200">阅读:60</span>  
+          </div>
       </div>
     </div>
 	
