--- a/application/modules/Admin/views/ad/edit.html
+++ b/application/modules/Admin/views/ad/edit.html
@@ -21,6 +21,13 @@
                             </div>
                         </div>
                         <div class="layui-form-item">
+                            <label for="title" class="layui-form-label">广告标题</label>
+                            <div class="layui-input-inline">
+                                <input type="text" id="title" name="title" autocomplete="off" lay-verify="" value="<?php echo $items['title'];?>" class="layui-input">
+                            </div>
+							<div class="layui-form-mid layui-word-aux">广告标题会在广告上方显示，可以留空</div>
+                        </div>
+                        <div class="layui-form-item">
                             <label for="label" class="layui-form-label">广告标签</label>
                             <div class="layui-input-inline">
                                 <input type="text" id="label" name="label" autocomplete="off" <?php if($items['locked']=="1"):?>readonly<?php endif;?> lay-verify="required" value="<?php echo $items['label'];?>" class="layui-input">
