--- a/templates/shadan/Product/detail/password.html
+++ b/templates/shadan/Product/detail/password.html
@@ -115,7 +115,7 @@
 									<?php if(isset($product['description'])):?><?php echo htmlspecialchars_decode(htmlspecialchars_decode($product['description']));?><?php endif;?>
 									<!--广告插入-->
 									<?php if(isset($ad['product_content_ad']) AND !empty($ad['product_content_ad'])):?>
-										<?php echo $ad['product_content_ad'];?>
+										<?php echo $ad['product_content_ad']['content'];?>
 									<?php endif;?>
 								</div>	  
 							</div>
