--- a/templates/shadan/Index/index/index.html
+++ b/templates/shadan/Index/index/index.html
@@ -85,7 +85,7 @@
 	</div>		
 </div>
 <!-- 首页弹窗广告-->
-<div id="layerad" style="display: none;"><?php echo $config['layerad'];?></div>
+<div id="layerad" style="display: none;"><?php echo $ad['index_layer_ad']['content'];?></div>
 <!--引入公共底文件-->
 <?php include '../templates/shadan/common/footer.html';?>
 <script>layui.use('index');</script>
