--- a/application/modules/Admin/views/basesetting/index.html
+++ b/application/modules/Admin/views/basesetting/index.html
@@ -44,6 +44,24 @@
                                 <input type="text" id="logo" autocomplete="off" value="<?php echo $config['logo'];?>" class="layui-input">
                             </div>
                         </div>
+                        <div class="layui-form-item">
+                            <label for="shortcuticon" class="layui-form-label">站点ICO</label>
+                            <div class="layui-input-inline">
+                                <input type="text" id="shortcuticon" autocomplete="off" value="<?php echo $config['shortcuticon'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="backgroundimage" class="layui-form-label">站点背景图</label>
+                            <div class="layui-input-inline">
+                                <input type="text" id="backgroundimage" autocomplete="off" value="<?php echo $config['backgroundimage'];?>" class="layui-input">
+                            </div>
+                        </div>
+                        <div class="layui-form-item">
+                            <label for="tongji" class="layui-form-label">站点统计</label>
+                            <div class="layui-input-inline">
+								<textarea placeholder="" id="tongji" name="tongji" autocomplete="off" class="layui-textarea" style="height: 80px;"><?php echo $config['tongji'];?></textarea>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
